--- a/98版的二级简码故事（练习打字用）.md
+++ b/98版的二级简码故事（练习打字用）.md
@@ -11,7 +11,9 @@
 ## 第三段
 
 * 立秋旬内，由涨水的洋浦、江汉，经历汽油渡、浊波济、沁汗沟、溃泗坡，恰好步入最北面李子林。这时，出了稀有的怪事，只听一伙妇人尖叫，赤光闪闪，从林间慢慢晃出一对不轨汉子。回身细扫一眼，知是什么东东？一个是从外界芭芭拉观光归来的孙继龙，另一个是从府库坊间戏票机构过来的查志刊。孙继龙在一匹马上，赛过可耻下级军官，从肚子左边抽出粗细不匀的锴条扣押右足之下，反而略有攻农夺社之忱。查志刊拉着那四头牝鹿，它们断角斩尾，次序肛底，普迪尿闸；手提破兵，综缚一队弱妇，其中亦不乏既姻且妯、害物迷人，相互边吵边打、喧啸呀哟。矿砂、零锭、钉针、朋纱、组纺、胶毡、绵线、钱财、珀末、琛册等赃物委得一地。一个年纪半百、胸膛脏垢、脂肪精肥的男子号叫：“啊此处多少不吉，明显不可久呆。” 退出数步，原地就晓影暗增，闪电打雷、下雪结冰。
-* bullet point *italic*, **bold**
+* bullet point 
+- *italic*
+- **bold**
 
 ## 最终段
 
